--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,28 @@
   font-size: large;
 }
 
+.jumbotron {
+  width: 100%;
+  margin-left: 0;
+  height: 400px;
+  color: white;
+  background-image: url("./images/pixelgame.jpg");
+  padding-top: 100px;
+}
+
+header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #5138A1;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+  color: white;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
