--- a/src/components/Classmate/Classmate.css
+++ b/src/components/Classmate/Classmate.css
@@ -3,10 +3,10 @@
 .card {
     background: #fff;
     border-radius: 2px;
-    height: 325px;
+    height: 250px;
     margin: 1rem;
     position: relative;
-    width: 325px;
+    width: 250px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
     text-align: left;
     display: flex;
@@ -14,13 +14,14 @@
   }
   
   .card > .img-container {
-    height: 60%;
+    height: 80%;
+    width:100%;
     overflow: hidden;
     text-align: center;
     background:#6CADDC;
   }
   .card > .img-container > img {
-    width: 60%
+    width: 50%
   }
   
   .card > .content {
