--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,4 @@
-.App {
-  text-align: center;
-}
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
 .jumbotron {
   width: 100%;
@@ -15,7 +6,7 @@
   height: 300px;
   color: white;
   background-image: url("./images/pixelgame.jpg");
-  padding-top: 50px;
+  /* padding-top: 50px; */
 }
 
 h1 {
